--- a/Skeleton/Api/Tests/Application/Command/Handler/PatchCommandHandlerTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/Handler/PatchCommandHandlerTest.php.twig
@@ -34,11 +34,17 @@ class PatchCommandHandlerTest extends \PHPUnit_Framework_TestCase
         $this->commandHandler = new PatchCommandHandler($this->workflowHandler);
     }
 
+    /**
+    * VErify that commandHandler implements CommandHandlerInterface
+    */
     public function testInterfaces()
     {
         $this->assertInstanceOf(CommandHandlerInterface::class, $this->commandHandler);
     }
 
+    /**
+    * Verify the testProcess function
+    */
     public function testProcess()
     {
         $entity = [['id'=>'123465']];
