--- a/Skeleton/Api/Tests/Application/Query/SearchByQueryTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Query/SearchByQueryTest.php.twig
@@ -19,11 +19,17 @@ class SearchByQueryTest extends \PHPUnit_Framework_TestCase
     protected $transaction;
     protected $jsonRequest;
 
+    /*
+    * Configure the tests
+    */
     public function setUp()
     {
         $this->query = new SearchByQuery([],0,0);
     }
 
+    /*
+    * Verify that query implements QueryInterface
+    */
     public function testInterface()
     {
         $this->assertInstanceOf(QueryInterface::class, $this->query);
