--- a/Skeleton/Api/Tests/Presentation/Request/Entity/Command/DeleteRequestTest.php.twig
+++ b/Skeleton/Api/Tests/Presentation/Request/Entity/Command/DeleteRequestTest.php.twig
@@ -37,7 +37,9 @@ class DeleteRequestTest extends \PHPUnit_Framework_TestCase
      */
     protected $request;
 
-    /* configure the test */
+    /*
+     * configure the test
+     */
     public function setUp()
     {
         $this->SymfonyStrategy = Phake::mock(SymfonyStrategy::class);
@@ -47,7 +49,9 @@ class DeleteRequestTest extends \PHPUnit_Framework_TestCase
     }
 
 
-    /* Verify that request implements QueryRequestInterface */
+    /*
+    * Verify that request implements QueryRequestInterface
+    */
     public function testGetRequestInterface()
     {
         $this->assertInstanceof(CommandRequestInterface::class, $this->request);
