--- a/Skeleton/Api/Tests/Presentation/Request/Entity/Query/GetAllRequestTest.php.twig
+++ b/Skeleton/Api/Tests/Presentation/Request/Entity/Query/GetAllRequestTest.php.twig
@@ -39,7 +39,9 @@ class GetAllRequestTest extends \PHPUnit_Framework_TestCase
      */
     protected $request;
 
-    /* Configure the test */
+    /*
+    * Configure the test
+    */
     public function setUp()
     {
         $this->SymfonyStrategy = Phake::mock(SymfonyStrategy::class);
@@ -48,7 +50,9 @@ class GetAllRequestTest extends \PHPUnit_Framework_TestCase
 
     }
 
-    /* Verify that request implements QueryRequestInterface */
+    /*
+    * Verify that request implements QueryRequestInterface
+    */
     public function testGetRequestInterface()
     {
         $this->assertInstanceof(QueryRequestInterface::class ,$this->request);
