--- a/Skeleton/Api/Tests/Presentation/Request/Entity/Query/SearchByRequestTest.php.twig
+++ b/Skeleton/Api/Tests/Presentation/Request/Entity/Query/SearchByRequestTest.php.twig
@@ -35,7 +35,9 @@ class SearchByRequestTest extends \PHPUnit_Framework_TestCase
      */
     protected $request;
 
-    /* Configure the test */
+    /*
+    * Configure the test
+    */
     public function setUp()
     {
         $this->SymfonyStrategy = Phake::mock(SymfonyStrategy::class);
@@ -44,7 +46,9 @@ class SearchByRequestTest extends \PHPUnit_Framework_TestCase
 
     }
 
-    /* Verify that request implements QueryRequestInterface */
+    /*
+    * Verify that request implements QueryRequestInterface
+    */
     public function testGetRequestInterface()
     {
         $this->assertInstanceof(QueryRequestInterface::class, $this->request);
