--- a/Skeleton/Api/Tests/Presentation/Request/Entity/Query/GetIdsRequestTest.php.twig
+++ b/Skeleton/Api/Tests/Presentation/Request/Entity/Query/GetIdsRequestTest.php.twig
@@ -37,7 +37,9 @@ class GetIdsRequestTest extends \PHPUnit_Framework_TestCase
      */
     protected $request;
 
-    /* configure the test */
+    /*
+     * configure the test
+     */
     public function setUp()
     {
         $this->SymfonyStrategy = Phake::mock(SymfonyStrategy::class);
@@ -46,7 +48,9 @@ class GetIdsRequestTest extends \PHPUnit_Framework_TestCase
 
     }
 
-    /* Verify that request implements QueryRequestInterface */
+    /*
+    * Verify that request implements QueryRequestInterface
+    */
     public function testGetRequestInterface()
     {
         $this->assertInstanceof(QueryRequestInterface::class, $this->request);
