--- a/Skeleton/Api/Tests/Domain/Service/Manager/ManagerTest.php.twig
+++ b/Skeleton/Api/Tests/Domain/Service/Manager/ManagerTest.php.twig
@@ -9,26 +9,24 @@ use {{ projectName }}\Domain\Service\{{ entityName }}\Manager\CountryManager;
 use {{ projectName }}\Infrastructure\Persistence\Repository\{{ entityName }}\Orm\GetRepository;
 use {{ projectName }}\Domain\Service\{{ entityName }}\Processor\PrePersistProcess;
 use Phake;
-use ReflectionClass;
 use Sfynx\DddBundle\Layer\Domain\Service\Generalisation\Factory\RepositoryFactoryInterface;
 use Sfynx\DddBundle\Layer\Domain\ValueObject\IdVO;
 use Sfynx\DddBundle\Layer\Infrastructure\Logger\Logger;
 use Sfynx\DddBundle\Layer\Infrastructure\Persistence\Generalisation\CouchDB\SaveRepository;
-use Sfynx\DddBundle\Layer\Infrastructure\Validator\Constraint\IdValidator;
 
 {% set args = "" %}
 {% for field in entityFields %}
-    {% if field.type != "id" %}
-        {% if field.type == "number" %}
-            {% set args = args ~ "123,"  %}
-        {% else %}
-            {% if field.type == "boolean" %}
-                {% set args = args ~ "true,"  %}
-            {% else %}
-                {% set args = args ~ "'abc',"  %}
-            {% endif %}
-        {% endif %}
-    {% endif %}
+{% if field.type != "id" %}
+{% if field.type == "number" %}
+{% set args = args ~ "123,"  %}
+{% else %}
+{% if field.type == "boolean" %}
+{% set args = args ~ "true,"  %}
+{% else %}
+{% set args = args ~ "'abc',"  %}
+{% endif %}
+{% endif %}
+{% endif %}
 {% endfor %}
 
 
@@ -70,9 +68,10 @@ class {{ entityName }}ManagerTest extends  \PHPUnit_Framework_TestCase
         Phake::when($this->repo)->create(Phake::anyParameters())->thenReturn(null);
     }
 
-    /* Test the create function */
-    * public function testCreate()
+    /*
+    * Test the create function
     */
+    public function testCreate()
     {
         if(!isset($_SERVER['HTTP_X_TENANT_ID'])) {
             $_SERVER['HTTP_X_TENANT_ID']='1000';
