Changing Country in variables

--- a/Skeleton/Api/Tests/Application/Command/DeleteCommandTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/DeleteCommandTest.php.twig
@@ -1,7 +1,7 @@
 <?php
 declare(strict_types = 1);
 
-namespace  Tests\Application\Country\Command;
+namespace  Tests\Application\{{ entityName }}\Command;
 
 use {{ projectName }}\Application\{{ entityName }}\Command\DeleteCommand;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\CommandInterface;
