--- a/Skeleton/Api/Tests/Application/Command/Handler/DeleteCommandHandlerTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/Handler/DeleteCommandHandlerTest.php.twig
@@ -28,7 +28,7 @@ class DeleteCommandHandlerTest extends \PHPUnit_Framework_TestCase
     */
     public function setUp()
     {
-        $this->manager = \Phake::mock(CountryManager::class);
+        $this->manager = \Phake::mock({{ entityName|ucfirst }}Manager::class);
         $this->command = \Phake::mock(DeleteCommand::class);
 
         $this->commandHandler = new DeleteCommandHandler($this->manager);
