--- a/Skeleton/Api/Tests/Application/Command/NewCommandTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/NewCommandTest.php.twig
@@ -2,7 +2,7 @@
 
 namespace  Tests\Application\{{ entityName }}\Command;
 
-use {{ projectName }}\Application\Country\Command\NewCommand;
+use {{ projectName }}\Application\{{ entityName }}\Command\NewCommand;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\CommandInterface;
 
 /**
