--- a/Skeleton/Api/Tests/Presentation/Coordination/Entity/Command/ControllerTest.php.twig
+++ b/Skeleton/Api/Tests/Presentation/Coordination/Entity/Command/ControllerTest.php.twig
@@ -1,7 +1,7 @@
 <?php
 declare(strict_types = 1);
 
-namespace Tests\Presentation\Coordination\Country\Command;
+namespace Tests\Presentation\Coordination\{{ entityName }}\Command;
 
 use {{ projectName}}\Application\{{ entityName }}\Command\Handler\NewCommandHandler;
 use {{ projectName}}\Application\{{ entityName }}\Command\Handler\PatchCommandHandler;
