--- a/Skeleton/Api/Tests/Presentation/Request/Entity/Query/GetIdsRequestTest.php.twig
+++ b/Skeleton/Api/Tests/Presentation/Request/Entity/Query/GetIdsRequestTest.php.twig
@@ -1,12 +1,12 @@
 <?php
 declare(strict_types = 1);
 
-namespace Tests\Presentation\Request\Country\Command;
+namespace Tests\Presentation\Request\{{ entityName }}\Command;
 
 require_once __DIR__.'/../../../../TraitVerifyResolver.php';
 
 
-use DemoCountry\Presentation\Request\Country\Query\GetByIdsRequest;
+use {{ projectName }}\Presentation\Request\{{ entityName }}\Query\GetByIdsRequest;
 use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\QueryRequestInterface;
 use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\Request\RequestInterface;
 use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\Request\SymfonyStrategy;
