Changing Country in variables

--- a/Skeleton/Api/Tests/Application/Command/Handler/DeleteManyCommandHandlerTest.php.twig
+++ b/Skeleton/Api/Tests/Application/Command/Handler/DeleteManyCommandHandlerTest.php.twig
@@ -4,7 +4,7 @@ declare(strict_types = 1);
 namespace  Tests\Application\{{ entityName }}\Command\Handler;
 
 use {{ projectName }}\Application\{{ entityName }}\Command\DeletManyeCommand;
-use {{ projectName }}\Domain\Service\{{ entityName }}\Manager\CountryManager;
+use {{ projectName }}\Domain\Service\{{ entityName }}\Manager\{{ entityName }}Manager;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\CommandHandlerInterface;
 use {{ projectName }}\Application\{{ entityName }}\Command\Handler\DeleteManyCommandHandler;
 use {{ projectName }}\Application\{{ entityName }}\Command\DeleteCommand;
