--- a/Skeleton/Api/Tests/Domain/Service/Manager/ManagerTest.php.twig
+++ b/Skeleton/Api/Tests/Domain/Service/Manager/ManagerTest.php.twig
@@ -1,7 +1,7 @@
 <?php
 declare(strict_types = 1);
 
-namespace Tests\Domain\Service\Manager
+namespace Tests\Domain\Service\Manager;
 
 
 use {{ projectName }}\Domain\Entity\{{ entityName }};
